--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="link_cadastrar">Criar cadastro</string>
     <string name="link_esqueci_senha">Esqueci minha senha</string>
     <string name="text_cadastro">Cadastro</string>
+    <string name="link_voltar">Voltar</string>
+    <string name="botao_criar">Criar</string>
+    <string name="botao_plantas">PLANTAS</string>
+    <string name="botao_eco_espacos">ECO ESPAÇOS</string>
+    <string name="botao_destaques">DESTAQUES</string>
+    <string name="botao_atualizar_cadastro">ATUALIZAR CADASTRO</string>
+    <string name="botao_sair">SAIR</string>
 </resources>
