--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="text_hora">00</string>
     <string name="text_dois_pontos">:</string>
     <string name="text_minutos">00</string>
+    <string name="botao_Buscar">Buscar</string>
 
 </resources>
